[gd_scene load_steps=9 format=2]

[ext_resource path="res://Enemies/MedievalUnit01.tscn" type="PackedScene" id=1]
[ext_resource path="res://Squad/buttonRound_grey.png" type="Texture" id=2]
[ext_resource path="res://Enemies/enemySquads/Enemy1Squad.gd" type="Script" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 98.0204

[sub_resource type="CircleShape2D" id=2]
radius = 104.077

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.6, 0.6, 0.6, 0 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 1, 1, 1, 1 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 1, 0, 0, 1 )

[sub_resource type="Theme" id=5]
ProgressBar/colors/font_color = Color( 0, 0, 0, 1 )
ProgressBar/colors/font_color_shadow = Color( 0, 0, 0, 1 )
ProgressBar/fonts/font = null
ProgressBar/styles/bg = SubResource( 6 )
ProgressBar/styles/fg = SubResource( 7 )

[node name="KinematicBody2D" type="KinematicBody2D" groups=["enemy"]]
scale = Vector2( 0.5, 0.5 )
script = ExtResource( 3 )

[node name="ButtonRoundGrey" type="Sprite" parent="."]
position = Vector2( 0, 35 )
scale = Vector2( 5, 5 )
texture = ExtResource( 2 )

[node name="units" type="Node2D" parent="."]

[node name="MedievalUnit01" parent="units" instance=ExtResource( 1 )]
position = Vector2( 0, -75 )

[node name="MedievalUnit02" parent="units" instance=ExtResource( 1 )]
position = Vector2( -75, 0 )

[node name="MedievalUnit04" parent="units" instance=ExtResource( 1 )]
position = Vector2( 75, 0 )

[node name="MedievalUnit03" parent="units" instance=ExtResource( 1 )]
position = Vector2( 0, 75 )

[node name="hitbox" type="CollisionShape2D" parent="."]
position = Vector2( 0, 28 )
shape = SubResource( 1 )

[node name="AgroRange" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AgroRange"]
position = Vector2( 0, 28 )
shape = SubResource( 2 )

[node name="ProgressBar" type="ProgressBar" parent="."]
margin_left = -60.0
margin_top = -164.0
margin_right = 60.0
margin_bottom = -150.0
theme = SubResource( 5 )
value = 60.0
percent_visible = false

[node name="attackTimer" type="Timer" parent="."]

[node name="deathTimer" type="Timer" parent="."]

[connection signal="death" from="." to="." method="_on_KinematicBody2D_death" flags=6]
[connection signal="body_entered" from="AgroRange" to="." method="_on_AgroRange_body_entered"]
[connection signal="timeout" from="attackTimer" to="." method="_on_attackTimer_timeout"]
[connection signal="timeout" from="deathTimer" to="." method="_on_deathTimer_timeout" flags=6]
